preimage now properly working...wow

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -25,6 +25,8 @@ set(REVEREND_EXECUTABLE kbrcpp)
 set(CNPY_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/../cnpy)
 set(CNPY_LIB_DIR ${PROJECT_SOURCE_DIR}/../cnpy)
 
+set(QUADPROG_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/../quadprog)
+
 find_library(CNPY_LIBRARY NAMES "cnpy" PATHS ${CNPY_LIB_DIR})
 find_library(NLOPT_LIBRARY NAMES "nlopt") 
 
@@ -39,7 +41,8 @@ find_package(Eigen3)
 
 include_directories( ${EIGEN3_INCLUDE_DIR}
                      ${Boost_INCLUDE_DIR}
-                     ${CNPY_INCLUDE_DIR})
+                     ${CNPY_INCLUDE_DIR}
+                     ${QUADPROG_INCLUDE_DIR})
 
 file(GLOB REVEREND_SOURCE_FILES "${REVEREND_SRC_DIRECTORY}/*.cpp")
 add_executable(${REVEREND_EXECUTABLE} ${REVEREND_SOURCE_FILES})
