add filter files

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -19,7 +19,8 @@ cmake_minimum_required(VERSION 2.8)
 project(reverend) 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 set(REVEREND_SRC_DIRECTORY ${PROJECT_SOURCE_DIR}/src)
-set(REVEREND_EXECUTABLE kbrcpp)
+set(REVEREND_REGRESSOR kbrcpp)
+set(REVEREND_FILTER kbrfilter)
 
 
 set(CNPY_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/../cnpy)
@@ -30,8 +31,8 @@ set(QUADPROG_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/../quadprog)
 find_library(CNPY_LIBRARY NAMES "cnpy" PATHS ${CNPY_LIB_DIR})
 find_library(NLOPT_LIBRARY NAMES "nlopt") 
 
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -std=c++11")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -std=c++11 -fopenmp")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -std=c++11")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++11 -fopenmp")
 set(CMAKE_BUILD_TYPE release)
 
 set(CMAKE_VERBOSE_MAKEFILE on)
@@ -44,15 +45,21 @@ include_directories( ${EIGEN3_INCLUDE_DIR}
                      ${CNPY_INCLUDE_DIR}
                      ${QUADPROG_INCLUDE_DIR})
 
-file(GLOB REVEREND_SOURCE_FILES "${REVEREND_SRC_DIRECTORY}/*.cpp")
-add_executable(${REVEREND_EXECUTABLE} ${REVEREND_SOURCE_FILES})
+# file(GLOB REVEREND_SOURCE_FILES "${REVEREND_SRC_DIRECTORY}/*.cpp")
+add_executable(${REVEREND_REGRESSOR} ${REVEREND_SRC_DIRECTORY}/${REVEREND_REGRESSOR}.cpp)
+add_executable(${REVEREND_FILTER} ${REVEREND_SRC_DIRECTORY}/${REVEREND_FILTER}.cpp)
 
-add_custom_command(TARGET ${REVEREND_EXECUTABLE} POST_BUILD 
-                    COMMAND ctags -R 
-                    WORKING_DIRECTORY ${REVEREND_SRC_DIRECTORY} 
-                    COMMENT "Creating tags" VERBATIM)
+# add_custom_command(TARGET ${REVEREND_EXECUTABLE} POST_BUILD 
+                    # COMMAND ctags -R 
+                    # WORKING_DIRECTORY ${REVEREND_SRC_DIRECTORY} 
+                    # COMMENT "Creating tags" VERBATIM)
 
-target_link_libraries(${REVEREND_EXECUTABLE} 
+target_link_libraries(${REVEREND_REGRESSOR} 
+                      ${CNPY_LIBRARY}
+                      ${NLOPT_LIBRARY}
+                      ${Boost_FILESYSTEM_LIBRARY} )
+
+target_link_libraries(${REVEREND_FILTER} 
                       ${CNPY_LIBRARY}
                       ${NLOPT_LIBRARY}
                       ${Boost_FILESYSTEM_LIBRARY} )
