--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -21,7 +21,7 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 set(REVEREND_SRC_DIRECTORY ${PROJECT_SOURCE_DIR}/src)
 set(REVEREND_REGRESSOR kbrregressor)
 set(REVEREND_FILTER kbrfilter)
-
+set(REVEREND_QUANTILES kbrquantiles)
 
 set(CNPY_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/../cnpy)
 set(CNPY_LIB_DIR ${PROJECT_SOURCE_DIR}/../cnpy)
@@ -48,6 +48,7 @@ include_directories( ${EIGEN3_INCLUDE_DIR}
 # file(GLOB REVEREND_SOURCE_FILES "${REVEREND_SRC_DIRECTORY}/*.cpp")
 add_executable(${REVEREND_REGRESSOR} ${REVEREND_SRC_DIRECTORY}/${REVEREND_REGRESSOR}.cpp)
 add_executable(${REVEREND_FILTER} ${REVEREND_SRC_DIRECTORY}/${REVEREND_FILTER}.cpp)
+add_executable(${REVEREND_QUANTILES} ${REVEREND_SRC_DIRECTORY}/${REVEREND_QUANTILES}.cpp)
 
 # add_custom_command(TARGET ${REVEREND_EXECUTABLE} POST_BUILD 
                     # COMMAND ctags -R 
@@ -60,6 +61,11 @@ target_link_libraries(${REVEREND_REGRESSOR}
                       ${Boost_FILESYSTEM_LIBRARY} )
 
 target_link_libraries(${REVEREND_FILTER} 
+                      ${CNPY_LIBRARY}
+                      ${NLOPT_LIBRARY}
+                      ${Boost_FILESYSTEM_LIBRARY} )
+                    
+target_link_libraries(${REVEREND_QUANTILES} 
                       ${CNPY_LIBRARY}
                       ${NLOPT_LIBRARY}
                       ${Boost_FILESYSTEM_LIBRARY} )
