massive refactor done for regressor, still got to do filter and quantile

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -47,8 +47,8 @@ include_directories( ${EIGEN3_INCLUDE_DIR}
 
 # file(GLOB REVEREND_SOURCE_FILES "${REVEREND_SRC_DIRECTORY}/*.cpp")
 add_executable(${REVEREND_REGRESSOR} ${REVEREND_SRC_DIRECTORY}/${REVEREND_REGRESSOR}.cpp)
-add_executable(${REVEREND_FILTER} ${REVEREND_SRC_DIRECTORY}/${REVEREND_FILTER}.cpp)
-add_executable(${REVEREND_QUANTILES} ${REVEREND_SRC_DIRECTORY}/${REVEREND_QUANTILES}.cpp)
+# add_executable(${REVEREND_FILTER} ${REVEREND_SRC_DIRECTORY}/${REVEREND_FILTER}.cpp)
+# add_executable(${REVEREND_QUANTILES} ${REVEREND_SRC_DIRECTORY}/${REVEREND_QUANTILES}.cpp)
 
 # add_custom_command(TARGET ${REVEREND_EXECUTABLE} POST_BUILD 
                     # COMMAND ctags -R 
@@ -60,12 +60,12 @@ target_link_libraries(${REVEREND_REGRESSOR}
                       ${NLOPT_LIBRARY}
                       ${Boost_FILESYSTEM_LIBRARY} )
 
-target_link_libraries(${REVEREND_FILTER} 
-                      ${CNPY_LIBRARY}
-                      ${NLOPT_LIBRARY}
-                      ${Boost_FILESYSTEM_LIBRARY} )
+# target_link_libraries(${REVEREND_FILTER} 
+                      # ${CNPY_LIBRARY}
+                      # ${NLOPT_LIBRARY}
+                      # ${Boost_FILESYSTEM_LIBRARY} )
                     
-target_link_libraries(${REVEREND_QUANTILES} 
-                      ${CNPY_LIBRARY}
-                      ${NLOPT_LIBRARY}
-                      ${Boost_FILESYSTEM_LIBRARY} )
+# target_link_libraries(${REVEREND_QUANTILES} 
+                      # ${CNPY_LIBRARY}
+                      # ${NLOPT_LIBRARY}
+                      # ${Boost_FILESYSTEM_LIBRARY} )
