add spare regressor start

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -20,6 +20,7 @@ project(reverend)
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 set(REVEREND_SRC_DIRECTORY ${PROJECT_SOURCE_DIR}/src)
 set(REVEREND_EXECUTABLE kbrcpp)
+set(REVEREND_SPARSE_EXECUTABLE skbrcpp)
 
 set(CNPY_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/../cnpy)
 set(CNPY_LIB_DIR ${PROJECT_SOURCE_DIR}/../cnpy)
@@ -44,6 +45,7 @@ include_directories( ${EIGEN3_INCLUDE_DIR}
                      ${QUADPROG_INCLUDE_DIR})
 
 add_executable(${REVEREND_EXECUTABLE} ${REVEREND_SRC_DIRECTORY}/${REVEREND_EXECUTABLE}.cpp)
+add_executable(${REVEREND_SPARSE_EXECUTABLE} ${REVEREND_SRC_DIRECTORY}/${REVEREND_SPARSE_EXECUTABLE}.cpp)
 
 add_custom_command(TARGET ${REVEREND_EXECUTABLE} POST_BUILD 
                     COMMAND ctags -R 
@@ -51,6 +53,11 @@ add_custom_command(TARGET ${REVEREND_EXECUTABLE} POST_BUILD
                     COMMENT "Creating tags" VERBATIM)
 
 target_link_libraries(${REVEREND_EXECUTABLE} 
+                      ${CNPY_LIBRARY}
+                      ${NLOPT_LIBRARY}
+                      ${Boost_FILESYSTEM_LIBRARY} )
+                    
+target_link_libraries(${REVEREND_SPARSE_EXECUTABLE} 
                       ${CNPY_LIBRARY}
                       ${NLOPT_LIBRARY}
                       ${Boost_FILESYSTEM_LIBRARY} )
