cmake now finds suitesparse and lapack

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -38,6 +38,7 @@ set(CMAKE_VERBOSE_MAKEFILE on)
 find_package(Boost COMPONENTS filesystem REQUIRED)
 find_package(Eigen3)
 find_package(SuiteSparse)
+find_package(LAPACK)
 
 include_directories( ${EIGEN3_INCLUDE_DIR}
                      ${Boost_INCLUDE_DIR}
@@ -52,14 +53,16 @@ add_custom_command(TARGET ${REVEREND_EXECUTABLE} POST_BUILD
                     COMMENT "Creating tags" VERBATIM)
 
 target_link_libraries(${REVEREND_EXECUTABLE} 
-                      cholmod
-                      ccolamd
-                      camd
-                      colamd
-                      amd
-                      suitesparseconfig
-                      lapack
-                      blas
+                      ${SUITESPARSE_LIBRARIES}
+                      ${LAPACK_LIBRARIES}
+                      # cholmod
+                      # ccolamd
+                      # camd
+                      # colamd
+                      # amd
+                      # suitesparseconfig
+                      # lapack
+                      # blas
                       ${CNPY_LIBRARY}
                       ${NLOPT_LIBRARY}
                       ${Boost_FILESYSTEM_LIBRARY} )
