--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -29,8 +29,8 @@ set(QUADPROG_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/../quadprog)
 find_library(CNPY_LIBRARY NAMES "cnpy" PATHS ${CNPY_LIB_DIR})
 find_library(NLOPT_LIBRARY NAMES "nlopt") 
 
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -std=c++11")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++11 -fopenmp")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -std=c++11")
+set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG -std=c++11 -fopenmp")
 set(CMAKE_BUILD_TYPE release)
 
 set(CMAKE_VERBOSE_MAKEFILE on)
