maybe working but maybe not

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -20,7 +20,6 @@ project(reverend)
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 set(REVEREND_SRC_DIRECTORY ${PROJECT_SOURCE_DIR}/src)
 set(REVEREND_EXECUTABLE kbrcpp)
-set(REVEREND_SPARSE_EXECUTABLE skbrcpp)
 
 set(CNPY_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/../cnpy)
 set(CNPY_LIB_DIR ${PROJECT_SOURCE_DIR}/../cnpy)
@@ -46,21 +45,13 @@ include_directories( ${EIGEN3_INCLUDE_DIR}
                      # ${QUADPROG_INCLUDE_DIR})
 
 add_executable(${REVEREND_EXECUTABLE} ${REVEREND_SRC_DIRECTORY}/${REVEREND_EXECUTABLE}.cpp)
-add_executable(${REVEREND_SPARSE_EXECUTABLE} ${REVEREND_SRC_DIRECTORY}/${REVEREND_SPARSE_EXECUTABLE}.cpp)
 
-add_custom_command(TARGET ${REVEREND_SPARSE_EXECUTABLE} POST_BUILD 
+add_custom_command(TARGET ${REVEREND_EXECUTABLE} POST_BUILD 
                     COMMAND ctags -R 
                     WORKING_DIRECTORY ${REVEREND_SRC_DIRECTORY} 
                     COMMENT "Creating tags" VERBATIM)
 
 target_link_libraries(${REVEREND_EXECUTABLE} 
-                      ${SUITESPARSE_LIBRARIES}
-                      ${LAPACK_LIBRARIES}
-                      ${CNPY_LIBRARY}
-                      ${NLOPT_LIBRARY}
-                      ${Boost_FILESYSTEM_LIBRARY} )
-                    
-target_link_libraries(${REVEREND_SPARSE_EXECUTABLE} 
                       ${SUITESPARSE_LIBRARIES}
                       ${LAPACK_LIBRARIES}
                       ${CNPY_LIBRARY}
